# blockchain-reimagined

./: quartz.config.ts
content/: Ideas.md  index.md  main.py  pyproject.toml
content/Appendix/: Blockchain Models.md  Commodatization.md  Economic Security.md  Frontier Issues.md  Less Trust, More Truth.md  Need For Trust.md  On and Off Ramp.md  Onchain and Offchain.md  State Proof.md  The Free Internet.md
content/Content/: Introduction.md  Prelude.md  Value Offering.md
content/Content/How/: Blockchains Are Overrated.md  Proof of Stake.md  Proof of Work.md  Verifiable Distributed Systems.md
content/Content/Scaling/: Scaling Out - Introduction.md  What Scaling Blockchains Means.md
content/Content/What/: Blockchain Networks.md  Blockchain-based Authorities.md  Blockchains are Overrated.md  Evolution of Blockchain State Machines.md  Execution, Ordering and History Yields State Machine.md  Execution, Ordering, History and State Machines.md  Index.md  What Is This All About?.md
content/Glossary/: Authority.md  Block and Header.md  Blockspace.md  Consensus Algorithm.md  Consortium Blockchains.md  Delegators or Nominators.md  Fork.md  Miners and Validators.md  Mining Pools.md  Resilience.md  State Machine.md  Trust.md  Web3.md
content/Propositions/: Proposition - Blockchain and Contention.md  Proposition - Blockchains are Overrated.md  Proposition - Oracle Problem in Authorities.md  Proposition - Weakest Link.md
content/Related/: A note on decentralization.md  Unstoppability of Technlogy.md
